added music to other pages mute bug unfixed

--- a/champion/templates/credits_assets.html
+++ b/champion/templates/credits_assets.html
@@ -74,7 +74,7 @@
             <ul>
                 <li>Icons by <a href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
                 <li>Images from <a href="https://unsplash.com/" target="_blank">Pixel</a></li>
-                <li>Backgrounds from <a href="https://www.pexels.com/video/the-sun-illuminating-earth-s-surface-1851190/" target="_blank">Video by Ingrid North from Pexels</a></li>
+                <li>Backgrounds from <a href="https://www.pexels.com/video/the-sun-illuminating-earth-s-surface-1851190/" target="_blank">Video by Ingrid North from Pexels Video by Borys Zaitsev: https://www.pexels.com/video/planet-earth-spinning-8295518/</a></li>
                 Photo by  
                 <li>background image for vita by<a href="https://www.pexels.com/photo/aerial-view-and-grayscale-photography-of-high-rise-buildings-1105766/" target="_blank">Tatiana Fet from Pexels</a></li>
             </ul>
@@ -83,7 +83,7 @@
         
     </div>
     <footer>
-        © 2024 THE CHAMPIONS CLUB. All rights reserved.
+        © 2025 THE CHAMPIONS CLUB. All rights reserved.
     </footer>
 </body>
 </html>
