--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -911,7 +911,7 @@ document.addEventListener('DOMContentLoaded', () => {
         /* Marquee Styles */
 /* Marquee Styles */
 .marquee span{
-    text-transform: uppercase;
+    
 }
 .marquee-container {
 
@@ -1066,17 +1066,17 @@ document.addEventListener('DOMContentLoaded', () => {
                 </div>
                 <div class="text">
                     <h4>TCC NETWORKING</h4>
-                    <p>STEP INTO A WORLD OF ABUNDANCE WHERE ACHIEVEMENTS MATTER.</p>
+                    <p>Step into world of abundance where achievements matter</p>
                     <a href="{% url 'membership_portal' %}" class="find-out-more-link">CHECK YOUR ELIGIBLITY &rarr;</a>
                 </div>
             </div>
             <div class="interactive-card-button" id="interactive-card2" data-index="2">
                 <div class="icon">
-                    <img src="{% static 'images/academia icon.png' %}" alt="Academia Icon">
+                    <img src="{% static 'images/Resources T.png' %}" alt="Academia Icon">
                 </div>
                 <div class="text">
                     <h4>TCC RESOURCES</h4>
-                    <p>EXPLORE OUR PREMIRE LIFESTYLE PRODUCTS AND SERVICES</p>
+                    <p>Explore our premier life style and services</p>
                     <a href="{% url 'resources' %}" class="find-out-more-link">BROWSE OUR CATALOG &rarr;</a>
                 </div>
             </div>
@@ -1086,7 +1086,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 </div>
                 <div class="text">
                     <h4>TCC BUSINESS</h4>
-                    <p>GROW WITH THOSE WHO STAND WITH YOU NO MATTER THE TIME OR PLACE</p>
+                    <p>Grow with those who stand with you no matter the time or place</p>
                     <a href="{% url 'register_partner' %}" class="find-out-more-link">SEND AN ENQUIRY &rarr;</a>
                 </div>
             </div>
@@ -1262,8 +1262,8 @@ document.addEventListener('DOMContentLoaded', () => {
 
 .interactive-card-button .icon {
     flex-shrink: 0;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     margin-right: 25px;
 }
 
