--- a/champion/templates/career_home.html
+++ b/champion/templates/career_home.html
@@ -1,6 +1,6 @@
 <!-- careers/templates/careers/home.html -->
 
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
 {% block title %}Careers{% endblock %}
 
