--- a/champion/templates/job_apply.html
+++ b/champion/templates/job_apply.html
@@ -1,6 +1,6 @@
 <!-- careers/templates/careers/job_apply.html -->
 
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
 {% block title %}Apply for {{ job.title }}{% endblock %}
 
