--- a/champion/templates/job_list.html
+++ b/champion/templates/job_list.html
@@ -1,8 +1,8 @@
 <!-- careers/templates/careers/job_list.html -->
 
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
-{% block title %}Job Openings{% endblock %}
+{% block title %}TCC | Job Openings{% endblock %}
 
 {% block content %}
 <section class="job-search">
