--- a/champion/templates/refund_policy.html
+++ b/champion/templates/refund_policy.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <title>TCC | Refund Policy</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    {% extends 'base1.html' %}
+    {% block title %}TCC | Refunds Policy{% endblock %}
+{% load static %}
+{% block content %}
     <style>
         body {
             background-color: #000;
@@ -60,145 +55,6 @@
             color: #e6b800;
         }
     </style>
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-</head>
-<body>
-    <style>
-        .top-navbar{
-            width:100%;
-        }
-    </style>
-    <section>
-    <nav class="top-navbar">
-        <!-- Logo on the left -->
-        <div class="logo">
-            <img src="{% static 'images/android.png' %}" alt="Champions Club Logo"> <!-- Add your logo image -->
-            THE CHAMPIONS CLUB
-        </div>
-
-        <!-- Menu Icon for Mobile -->
-        <div class="menu-icon" onclick="toggleMenu()">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-
-        <!-- Navigation Links -->
-        <ul id="nav-links">
-            <li><a href="{% url 'home' %}">HOME</a></li>
-           
-          
-    
-            <!-- Dropdown tab for Resources -->
-            <li class="dropdown">
-                <a href="#">RESOURCES</a>
-                <ul class="dropdown-content">
-                    
-                    <li class="dropdown-link"><a href="{% url 'vita' %}">VITA</a></li>
-                    <li class="dropdown-link"><a href="{% url 'opus' %}">OPUS</a></li>
-                   <li class="dropdown-link"><a href="{% url 'coming_soon' %}">NEXUS</a></li>
-                    <li class="dropdown-link"><a href="{% url 'epulum' %}">EPULUM</a></li>
-                    <li class="dropdown-link"><a href="{% url 'historia' %}">HISTORIA</a></li> 
-                </ul>
-            </li>
-
-
-
-            
-            <li><a href="{% url 'support_request' %}">CONTACT</a></li>
-            
-            {% if not user.is_authenticated %}
-            <li><a href="{% url 'login' %}"><i class="fa-solid fa-circle-user fa-xl"></i> LOGIN</a></li>
-            {% else %}
-            {% if registration.approved == 1 %}
-            {% if registration.membership_paid == 0 %}
-            <li><a href="{% url 'champions_dashboard' %} ">BUY MEMBERSHIP TODAY</a></li>
-            {% else %}
-            <li><a href="{% url 'champions_dashboard' %}"><i class="fa-solid fa-circle-user fa-xl"></i> DASHBOARD</a></li>
-            {% endif %}
-            {% else %}
-            <li class="dropdown">
-                <a href="#">
-                    {% if registration.profile_image %}
-                        <img src="{{ registration.profile_image.url }}" alt="Profile Image" class="navbar-profile-img">
-                    {% else %}
-                        <i class="fa-solid fa-circle-user fa-xl"></i>
-                    {% endif %}
-                </a>
-                <ul class="dropdown-content">
-                    <li class="dropdown-link"><a href="{% url 'user_profile' %}">PROFILE</a></li>
-                    <li class="dropdown-link"><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> LOGOUT</a></li>
-                </ul>
-            </li>
-            
-            {% endif %}
-            {% endif %}
-           
-            <!-- <li>
-                <div class="toggle">
-                    <input type="checkbox" id="muteToggle" onclick="toggleMusic()" class="toggle__input">
-                    <label for="muteToggle" class="toggle__label"></label><div class="music-toggle">
-                       </div>
-                </li> -->
-        </ul>
-    </nav>
-
-    <!-- Add your page content here -->
-
-    <script>
-        function toggleMenu() {
-            const menuIcon = document.querySelector('.menu-icon');
-            const navLinks = document.getElementById('nav-links');
-
-            menuIcon.classList.toggle('open');
-            navLinks.classList.toggle('show');
-        }
-    </script>
-   
-<div class="progress-container">
-    <div class="progress-bar" id="myBar"></div>
-  </div>  
-
-
-<script>
-
-
-  // Toggle dropdown for mobile
-  document.addEventListener('DOMContentLoaded', function() {
-    const dropdownLinks = document.querySelectorAll('.dropdown > a');
-    
-    dropdownLinks.forEach(function(dropdownLink) {
-        dropdownLink.addEventListener('click', function(e) {
-            e.preventDefault(); // Prevent default link behavior
-            
-            const dropdown = this.parentElement; // Get the parent <li> element
-
-            // Toggle the 'show' class to show or hide the dropdown
-            dropdown.classList.toggle('show');
-
-            // Close any other open dropdowns
-            document.querySelectorAll('.dropdown').forEach(function(otherDropdown) {
-                if (otherDropdown !== dropdown) {
-                    otherDropdown.classList.remove('show');
-                }
-            });
-        });
-    });
-});
-
-
-   function toggleMenu() {
-    const navLinks = document.getElementById('nav-links');
-    const menuIcon = document.querySelector('.menu-icon');
-    navLinks.classList.toggle('show');
-    menuIcon.classList.toggle('open');
-}
-
-    </script>
-    </section>
-    <section id="dividing-section">
-
-    </section>
     <div class="container mt-5">
         <h1>Refund Policy</h1>
         <p>Thank you for choosing The Champions Club. We strive to offer the best possible service and provide valuable educational content. However, we understand that there may be situations where you might seek a refund. This policy outlines the circumstances under which refunds are granted and the process for requesting a refund.</p>
@@ -235,216 +91,5 @@
 
         <p>Thank you for your understanding and cooperation.</p>
     </div>
-    <section id="dividing-section">
-
-    </section>
-            <footer id="footer">
-    
-    
-                <div class="footer-content">
-    
-                    <div class="footer-section">
-                        <img src="{% static 'images/logo.png' %}" alt="">
-                     </div>
-                    
-                    
-                     <div class="footer-section">
-                        <h4 class="footer-title">Quick Links</h4>
-                        <a href="{% url 'support_request' %}" class="footer-link">Support</a>
-                        <a href="{% url 'privacy_policy' %}" class="footer-link">Privacy Policy</a>
-                        <a href="{% url 'terms_conditions' %}" class="footer-link">Terms and Conditions</a>
-                        <a href="{% url 'refund_policy' %}" class="footer-link">Refund Policy</a>
-                        
-                        <a href="{% url 'about' %}" class="footer-link">About The Champions Club</a>
-                    </div>
-    
-                    <div class="footer-section">
-                        <h4 class="footer-title">Company</h4>
-                        <a href="{% url 'register_partner' %}" class="footer-link">Become a Partner</a>
-                        <a href="{% url 'careers' %}" class="footer-link">Careers</a>
-                        
-                    </div>
-    
-    
-                    <div class="footer-section">
-                        <h4 class="footer-title">STAY CONNECTED</h4>
-                        <div class="social-media">
-                            <a href="https://twitter.com" class="social-icon" aria-label="Twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="https://facebook.com" class="social-icon" aria-label="Facebook">
-                                <i class="fa-brands fa-linkedin" style="color: #ededed;"></i>
-                            </a>
-                            <a href="https://instagram.com" class="social-icon" aria-label="Instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </div>
-    
-                    </div>
-                    
-                </div>
-                <section id="dividing-section">
-    
-                </section>
-                <div class="footer-bottom">
-                    <div class="trademark">The Champions Club</div>
-                    <div class="copyright">Copyright © & Trademark ® 2024 The Champions Club™ - All Rights Reserved.</div>
-                </div>
-            </footer>
-    <style>
-        .navbar-profile-img {
-            width: 35px;             /* Adjust width as needed */
-            height: 35px;  
-                      /* Adjust height as needed */
-            border-radius: 50%;      /* Makes the image circular */
-            object-fit: cover;       /* Ensures the image covers the container without distortion */
-            vertical-align: middle;  /* Aligns the image vertically */
-        }
-    .footer-section button{
-        background-color: transparent;
-        color: white;
-        padding: 15px 45px;
-        border: 1px solid white;
-        margin-left: 15px;
-        font-size: 15px;
-        font-weight: bold;
-        cursor: pointer;
-        z-index: 2;
-        position: relative;
-        transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
-    }
-    
-    .footer-section button::before,
-    .footer-section button::after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        width: 20px;
-        height: 1px;
-        background-color: white;
-        transform: translateY(-50%);
-    }
-    .footer-section button::before {
-        left: 10px;
-    }
-    
-    .footer-section button::after {
-        right: 10px;
-    }
-    .footer-section button:hover {
-        background-color: white;
-        color: #333;
-        border-color: #333;
-    }
-    
-    
-    
-    
-    
-    
-    #footer {
-        background-color: #000;
-        padding: 50px 100px;
-        color: #f4f4f4;
-        font-family: 'Roboto', sans-serif;
-    }
-    
-    .footer-content {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        margin-bottom: 30px;
-        
-        padding-bottom: 20px;
-    }
-    
-    .footer-section {
-        flex: 1;
-        min-width: 200px;
-        margin: 10px;
-        margin-left: 100px;
-    }
-    
-    .footer-title {
-        font-size: 1.2rem;
-        margin-bottom: 15px;
-        color: #f4f4f4;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-    
-    .footer-link {
-        display: block;
-        color: #f4f4f4;
-        text-decoration: none;
-        margin-bottom: 10px;
-        font-size: 0.9rem;
-        transition: color 0.3s ease;
-    }
-    
-    .footer-link:hover {
-        color: #999;
-    }
-    
-    .social-media {
-        display: flex;
-        gap: 15px;
-        margin-top: 10px;
-    }
-    
-    .social-icon {
-        color: #f4f4f4;
-        text-decoration: none;
-        font-size: 1.1rem;
-        transition: color 0.3s ease;
-    }
-    
-    .social-icon:hover {
-        color: #999;
-    }
-    
-    .footer-bottom {
-        text-align: center;
-        margin-top: 20px;
-    }
-    
-    .trademark {
-        font-size: 1rem;
-        margin-bottom: 5px;
-    }
-    
-    .copyright {
-        font-size: 0.8rem;
-        color: #666;
-    }
-    
-    @media (max-width: 768px) {
-        #footer{
-            padding:0;
-        }
-        .footer-content {
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-    
-        .footer-section {
-            margin-bottom: 20px;
-            margin-left: 0;
-        }
-    
-        .social-media {
-            justify-content: center;
-        }
-    }
-    #footer img{
-        height: 150px;
-        margin:0 auto;
-    }
-    #dividing-section{
-            background: linear-gradient(to right, #000000d7, #bf943fe3, #b38728a8, #fbf5b7ea, #AA771C, #181818);
-            height: 1px;
-        }
-    </style>
-</body>
+    {% endblock %}
 </html>
