--- a/champion/templates/job_detail.html
+++ b/champion/templates/job_detail.html
@@ -1,6 +1,6 @@
 <!-- careers/templates/careers/job_detail.html -->
 
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
 {% block title %}{{ job.title }}{% endblock %}
 
