--- a/champion/templates/vita.html
+++ b/champion/templates/vita.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
-{% block title %}Coming Soon{% endblock %}
+{% block title %}TCC | VITA{% endblock %}
 {% load static %}
 {% block content %}
 <style>
